--- a/templates/layouts/layout1.html
+++ b/templates/layouts/layout1.html
@@ -88,6 +88,11 @@
             </div>
         </div>
     </footer>
+       <!-- jQuery -->
+    <script src="static/js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="static/js/bootstrap.min.js"></script>
 
 
 </body>
