Restructure app and rename forms

--- a/templates/about.html
+++ b/templates/about.html
@@ -40,7 +40,7 @@ About
                 </div>
                 <div class="col-sm-4 text-center">
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>Francisco Arcena
+                    <h3>Francisco Barcena
                         <small>Lead Devloper</small>
                     </h3>
                 </div>
