--- a/templates/guaranteedhours.html
+++ b/templates/guaranteedhours.html
@@ -6,9 +6,11 @@ Hours Worked
 {% macro render_field(field) %}
 <div class="form-group">
 	{% if field.name != "submit" %}
-	{{ field.label }}
-	{% endif %}
-	{{ field(class="form-control") }}
+	    {{ field.label }}
+        {{ field(class="form-control") }}   
+    {% else %}
+	   {{ field(class="btn btn-primary") }}
+    {% endif %}
 </div>
 {% endmacro %}
 
@@ -26,10 +28,12 @@ Hours Worked
                         
                     </h2>
                     <hr>
-          
+          <div class="jumbotron">
+            {{ result }}
+          </div>
 <form method="POST"  enctype="multipart/form-data" >
-				{{ render_field(form.guranteed_rate) }}
-				{{ render_field(form.guranteed_hours) }}
+				{{ render_field(form.guaranteed_rate) }}
+				{{ render_field(form.guaranteed_hours) }}
 				{{ render_field(form.actual_hours_worked) }}
 				{{ render_field(form.submit)}}
 					
