--- a/templates/hourlyrate.html
+++ b/templates/hourlyrate.html
@@ -7,7 +7,7 @@ Hours Worked
 <div class="form-group">
     {% if field.name != "submit" %}
         {{ field.label }}
-        {{ field(class="form-control") }}   
+        {{ field(**kwargs)|safe }}   
     {% else %}
        {{ field(class="btn btn-primary") }}
     {% endif %}
@@ -29,13 +29,47 @@ Hours Worked
                     </h2>
                     <hr>
                     <div class="jumbotron">
-            {{ result }}
+                    {% if entry %}
+                    <table class="table table-striped" >
+                    <tr>
+                        <th>Hr. Type</th>
+                        <th class="text-right">Hr/Pay   </th>
+                        <th class="text-right">Hours    </th>
+                        <th class="text-right">Paid     </th>
+                    </tr>
+                    <tr>
+                        <td>Regular</td>
+                        <td class="text-right">{{entry.regular['rate'] }}</td>
+                        <td class="text-right">{{entry.regular['hours']}}</td>
+                        <td class="text-right">{{entry.regular['pay']  }}</td>
+                    </tr>
+                    <tr>
+                        <td>Overtime</td>
+                        <td class="text-right">{{entry.overtime['rate']}}</td>
+                        <td class="text-right">{{entry.overtime['hours']}}</td>
+                        <td class="text-right">{{entry.overtime['pay']}}</td>
+                    </tr>
+                    <tr>
+                        <td>Double time</td>
+                        <td class="text-right">{{entry.doubletime['rate']}}</td>
+                        <td class="text-right">{{entry.doubletime['hours']}}</td>
+                        <td class="text-right">{{entry.doubletime['pay']}}</td>
+                    </tr>
+                    <tr>
+                        <td>Total</td>
+                        <td></td>
+                        <td class="text-right">{{entry.total['hours']}}</td>
+                        <td class="text-right">{{entry.total['pay']}}</td>
+                    </tr>
+                    </table>
+                    {% endif %}
           </div>
           
-<form method="POST"  enctype="multipart/form-data">
-				{{ render_field(form.hours_worked) }}
-				{{ render_field(form.hourly_rate) }}
-				{{ render_field(form.submit)}}
+<form method="POST" action="{{ url_for('hourly_rate') }}" enctype="multipart/form-data">
+                {{ form.csrf_token }}
+				{{ render_field(form.hours_worked,  class="form-control", autocomplete="off") }}
+				{{ render_field(form.hourly_rate,   class="form-control", autocomplete="off") }}
+				{{ render_field(form.submit,        class="form-control", autocomplete="off") }}
 
 		
 
