Implement calculations API

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -41,13 +41,13 @@ About
                 <div class="col-sm-4 text-center">
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="">
                     <h3>Francisco Barcena
-                        <small>Lead Devloper</small>
+                        <small>Lead Developer</small>
                     </h3>
                 </div>
               <div class="col-sm-4 text-center">
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="">
                     <h3>David Gonzalez
-                        <small>Programer</small>
+                        <small>Programmer</small>
                     </h3>
                 </div>
                 <div class="col-sm-4 text-center">
