Added files via upload

--- a/app/templates/layouts/layout1.html
+++ b/app/templates/layouts/layout1.html
@@ -69,7 +69,7 @@
                         <a href="guaranteedhours">Guaranteed Hours </a>
                     </li>
                     <li>
-                        <a href="hourlyrate">Hourly Rate </a>
+                        <a href="hourly_rate">Hourly Rate </a>
                     </li>
                 </ul>
             </div>
