Fix Hourly Rate bug. Add totals to results display

--- a/app/templates/guaranteedhours.html
+++ b/app/templates/guaranteedhours.html
@@ -1,4 +1,5 @@
 {% extends "layouts/layout1.html" %}
+
 {% block title %}
 Hours Worked
 {% endblock %}
@@ -37,9 +38,13 @@ $(function() {
             localRequest.data = data;
             return $.ajax(localRequest);
         }
-        self.calculate = function(values) {
+        self.calculate = function() {
             // values should be object
-            console.log(values);
+            values = {
+                guaranteed_hours : $('input[name="guaranteed_hours"]').val()       ,
+                guaranteed_rate : $('input[name="guaranteed_rate"]').val()         ,
+                actual_hours_worked : $('input[name="actual_hours_worked"]').val() ,
+            }
             self.ajax(self.calculationURI, 'GET', values).done(function(data) {
                 self.drows.removeAll();
                 console.log(data);
@@ -52,38 +57,39 @@ $(function() {
                         rate  : ko.observable(data.rows[i].rate   ),
                     });
                 }
+                self.total_pay(data.total_pay);
+                self.total_hours(data.total_hours);
             });
         }
 
     }
     var ghViewModel = new GHViewModel();
     ko.applyBindings(ghViewModel, $('#results_table')[0]);
-
+    $('input[name="calculate"]').click(function() {
+        ghViewModel.calculate();
+    });
     $('.form-control').each(function() {
         $(this).blur(function() {
-            values = {
-                guaranteed_hours : $('input[name="guaranteed_hours"]').val()       ,
-                guaranteed_rate : $('input[name="guaranteed_rate"]').val()         ,
-                actual_hours_worked : $('input[name="actual_hours_worked"]').val() ,
-            }
-            ghViewModel.calculate(values);
+            ghViewModel.calculate();
         });
-    })
+    });
+    $(document).on('keyup keypress', 'form input[type="text"]', function(e) {
+      if(e.keyCode == 13) {
+        e.preventDefault();
+        return false;
+      }
+    });
 });
 </script>
+<style>
+.line-at-top {
+    border-top:2px solid #333333 !important;
+}
+</style>
 {% endblock %}
 
 {% block content %}
-{% macro render_field(field) %}
-<div class="form-group">
-	{% if field.name != "submit" %}
-	    {{ field.label }}
-        {{ field(**kwargs)|safe }}   
-    {% else %}
-	   {{ field(class="btn btn-primary") }}
-    {% endif %}
-</div>
-{% endmacro %}
+
 
 
     <div class="container">
@@ -117,17 +123,22 @@ $(function() {
                             <td data-bind="text : pay"   class="text-right">{#entry.regular['pay']   #}</td>
                         </tr>
                         <!-- /ko -->
+                        <tr>
+                            <th colspan="2"                   class="line-at-top text-right">Total</th>
+                            <td data-bind="text :total_hours" class="line-at-top text-right"></td>
+                            <td data-bind="text :total_pay"   class="line-at-top text-right"></td>
+                        </tr>
                         </tbody>
                     </table>
                     
           </div>
-<form method="POST"  enctype="multipart/form-data" >
+<form method="POST"  enctype="multipart/form-data">
                 {{ form.csrf_token }}
-				{{ render_field(form.guaranteed_rate,       class="form-control", autocomplete="off") }}
-				{{ render_field(form.guaranteed_hours,      class="form-control", autocomplete="off") }}
-				{{ render_field(form.actual_hours_worked,   class="form-control", autocomplete="off") }}
-				{{ render_field(form.submit)}}
-					
+				{{ macros.render_field(form.guaranteed_rate,       class="form-control", autocomplete="off") }}
+				{{ macros.render_field(form.guaranteed_hours,      class="form-control", autocomplete="off") }}
+				{{ macros.render_field(form.actual_hours_worked,   class="form-control", autocomplete="off") }}
+                <button type="button" class="btn btn-default pull-left" name="calculate">Calculate</button>
+				{{ macros.render_field(form.submit, class="btn btn-primary pull-right")}}
 		
 
 			</form>
