--- a/app/templates/guaranteedhours.html
+++ b/app/templates/guaranteedhours.html
@@ -138,7 +138,7 @@ $(function() {
 				{{ macros.render_field(form.guaranteed_hours,      class="form-control", autocomplete="off") }}
 				{{ macros.render_field(form.actual_hours_worked,   class="form-control", autocomplete="off") }}
                 <button type="button" class="btn btn-default pull-left" name="calculate">Calculate</button>
-				{{ macros.render_field(form.submit, class="btn btn-primary pull-right")}}
+				{{ macros.render_field(form.save_invoice, class="btn btn-primary pull-right")}}
 		
 
 			</form>
