--- a/app/templates/hourly_rate.html
+++ b/app/templates/hourly_rate.html
@@ -137,8 +137,8 @@ $(function() {
 				{{ macros.render_field(form.hours_worked,  class="form-control", autocomplete="off") }}
 				{{ macros.render_field(form.hourly_rate,   class="form-control", autocomplete="off") }}
                 <button type="button" class="btn btn-default pull-left" name="calculate">Calculate</button>
-                {{ macros.render_field(form.submit,        class="btn btn-primary pull-right") }}
-                {{ render_field(form.save_invoice,   class="form-control", autocomplete="off") }}
+                {# macros.render_field(form.submit,        class="btn btn-primary pull-right") #}
+                {{ macros.render_field(form.save_invoice,   class="form-control", autocomplete="off") }}
         
 
             </form>
